<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 **
 **       Copyright (C) 2010-2011 Patrick Decat
 ** 
 **       This file is part of dear2dear.
 **
 **   dear2dear is free software: you can redistribute it and/or modify
 **   it under the terms of the GNU General Public License as published by
 **   the Free Software Foundation, either version 3 of the License, or
 **   (at your option) any later version.
 **
 **   dear2dear is distributed in the hope that it will be useful,
 **   but WITHOUT ANY WARRANTY; without even the implied warranty of
 **   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 **   GNU General Public License for more details.
 **
 **   You should have received a copy of the GNU General Public License
 **   along with dear2dear.  If not, see <http://www.gnu.org/licenses/>.
 **
 */
-->
<resources>
    <string name="app_name">Sandbox</string>
    <string name="app_version">0.0.1-SNAPSHOT</string>
    <string name="sample_device_admin">Sample device admin</string>
    <string name="sample_device_admin_description">Sample device admin description</string>
    <string name="add_admin_extra_app_text">Add admin extra app text</string>
        
    <string name="gotoSleep">Goto Sleep</string>
    <string name="storeSms">Store SMS</string>
    <string name="listApplications">List applications</string>
    <string name="showContactDetails">Show contact details</string>
    <string name="selectContact">Select contact</string>
    <string name="selectContactAndNumber">Select contact and number</string>
    <string name="selectActivity">Select activity</string>
    <string name="about">About</string>
    <string name="spinner">Spinner</string>
    <string name="hello">Hello World, Sandbox!</string>

    <!-- Strings for About dialog -->
    <string name="about_comments">A simple sandbox for testing purposes</string>
    <string name="about_copyright">Copyright © 2010 Patrick Decat</string>
    <string name="about_website_label">Sandbox at Google Code</string>
    <string name="about_website_url">http://code.google.com/p/dear2dear</string>
    <string name="about_email">pdecat+sb@gmail.com</string>

</resources>