<?xml version="1.0" encoding="UTF-8"?>
<!--
/*
 **
 **       Copyright (C) 2010-2011 Patrick Decat
 ** 
 **       This file is part of dear2dear.
 **
 **   dear2dear is free software: you can redistribute it and/or modify
 **   it under the terms of the GNU General Public License as published by
 **   the Free Software Foundation, either version 3 of the License, or
 **   (at your option) any later version.
 **
 **   dear2dear is distributed in the hope that it will be useful,
 **   but WITHOUT ANY WARRANTY; without even the implied warranty of
 **   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 **   GNU General Public License for more details.
 **
 **   You should have received a copy of the GNU General Public License
 **   along with dear2dear.  If not, see <http://www.gnu.org/licenses/>.
 **
 */
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/storeSms" android:title="@string/storeSms" />
	<item android:id="@+id/listApplications" android:title="@string/listApplications" />
	<item android:id="@+id/showContactDetails" android:title="@string/showContactDetails" />
	<item android:id="@+id/selectContact" android:title="@string/selectContact" />
	<item android:id="@+id/selectContactAndNumber" android:title="@string/selectContactAndNumber" />
	<item android:id="@+id/selectActivity" android:title="@string/selectActivity" />
	<item android:id="@+id/about" android:title="@string/about" />
</menu>
